Added code to complete base ui tests