@@ -6,7 +6,11 @@
   <version>1.0-SNAPSHOT</version>
   <name>Archetype - pomHybridJavaProject</name>
   <url>http://maven.apache.org</url>
-
+  <properties>
+    <maven.compiler.source>17</maven.compiler.source>  <!-- or 21 -->
+    <maven.compiler.target>17</maven.compiler.target>
+    <java.version>17</java.version>
+  </properties>
 
   <dependencies>
     <!-- Source: https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
@@ -37,5 +41,43 @@
       <version>5.5.1</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.12.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.12.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.13.0</version>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+          <compilerArgs>--enable-preview</compilerArgs>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.5.4</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>  <!-- Or src/test/resources -->
+          </suiteXmlFiles>
+          <parallel>methods</parallel>  <!-- Parallel: classes|methods|tests -->
+          <threadCount>4</threadCount>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
